# konductor

./: .dockerignore  .pre-commit-config.yaml  Dockerfile.pytorch  README.md  kube-launch.yml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: publish-to-pypi.yml
konductor/metadata/: __init__.py
konductor/metadata/remotesync/: __init__.py  minio.py
konductor/modules/losses/: __init__.py
konductor/modules/models/: encdec.py
konductor/modules/optimizers/: lamb.py
konductor/modules/scheduler/: common.py
konductor/trainer/: initialisation.py  pbar.py  profiler.py  pytorch.py
konductor/utilities/comm/: _tensorflow.py
logger/: checkpointer.py  manager.py
logging/: manager.py
src/konductor/: config.py  init.py  registry.py  shutdown.py
src/konductor/data/: __init__.py  dali.py
src/konductor/losses/: __init__.py
src/konductor/metadata/: __init__.py  base_statistic.py  checkpointer.py  manager.py  perflogger.py
src/konductor/models/: __init__.py
src/konductor/modules/: __init__.py  registry.py
src/konductor/optimizers/: __init__.py
src/konductor/scheduler/: __init__.py  _pytorch.py
src/konductor/trainer/: __init__.py  init.py  initialisation.py  pbar.py  profiler.py  pytorch.py  trainer.py
src/konductor/utilities/: metadata.py  onnx_export.py  pbar.py  profiler.py  tools.py
src/konductor/webserver/: app.py  state.py  utils.py
test/: base.yml  init_config.py
test/remote/: ssh_config  test_remote.py
test/statistics/: mnist.yml  test_base.py
tests/: base.yml  init_config.py  utils.py
tests/config_init/: test_pytorch.py
tests/remote/: ssh_config  test_remote.py
tests/statistics/: test_base.py  test_checkpointer.py  test_db.py  test_metamanager.py  test_perflogger.py  test_pqlogger.py  test_statistic.py  test_utils.py
tests/trainer/: test_e2e.py  test_ema.py  test_extra.py  test_pytorch.py  utils.py
tests/webui/: test_tree.py
torchstats/metadata/: __init__.py  checkpointer.py  manager.py
torchstats/metadata/remotesync/: __init__.py  _base.py  minio.py  ssh.py
torchstats/metadata/statistics/: __init__.py  perflogger.py  statistic.py
torchstats/modules/: __init__.py  lr_scheduler.py  registry.py
torchstats/modules/dataloader/: __init__.py  dali.py
torchstats/trainer/: __init__.py  initialisation.py  pytorch.py  trainer.py  utilities.py
torchstats/utilities/: comm.py  onnx_export.py
trainer/: trainer.py
(+73 files in other folders)
