[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "konductor"
version = "0.0.1"
authors = [
  { name="Bryce Ferenczi", email="frenzi@hotmail.com.au" },
]
description = "Framework for training generic ml models"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Natural Language :: English"
]

[project.urls]
"Homepage" = "https://github.com/5had3z/konductor"
"Bug Tracker" = "https://github.com/5had3z/konductor/issues"
